<resources>
    <string name="app_name" translatable="false">Gaming Goods</string>
    <string name="preview_image_for_the_deal">Preview Image for the deal</string>
    <string name="open_in_browser">Get content</string>
    <string name="platform_text" translatable="false">Platform: %1$s</string>
    <string name="date_text">Ends: %1$s</string>
    <string name="unknown">Unknown</string>


    <string name="all">All</string>
    <string name="pc" translatable="false">PC</string>
    <string name="nintendo_switch" translatable="false">Switch</string>
    <string name="playstation4" translatable="false">PS4</string>
    <string name="playstation5" translatable="false">PS5</string>
    <string name="xbox_one" translatable="false">Xbox One</string>
    <string name="xbox_series" translatable="false">Xbox Series X</string>
    <string name="android" translatable="false">Android</string>
    <string name="ios" translatable="false">iOS</string>
    <string name="vr" translatable="false">VR</string>
    <string name="nothing_found">There are no deals currently with these conditions</string>
    <string name="popularity">Popularity</string>
    <string name="date">Date</string>
    <string name="value">Value</string>
    <string name="game">Game</string>
    <string name="loot">Loot</string>
    <string name="error_message">Something bad happened</string>
    <string name="empty_str" translatable="false" />
    <string name="details_error">There were errors loading the deal, please go back to the previous page!</string>
    <string name="share">Share deal</string>
    <string name="notification_message">You should check all the current deals.</string>
    <string name="notification_channel_name">Reminder</string>
    <string name="have_a_look_at_these">Have a look at these!</string>

    <string name="button_confirm">Yes!</string>
    <string name="button_decline">No</string>
    <string name="notification_permission_dialog_text">Would you like to receive a weekly notification to check the app?</string>
    <string name="notifications_switch">Notifications Switch</string>
    <string name="button_deals">Let\'s see!</string>
    <string name="network_error">Network error</string>
    <string name="no_internet">No internet connection</string>
    <string name="deals">Deals</string>
    <string name="platforms">Platforms</string>
    <string name="content_type">Type</string>
    <string name="sort_by">Sort by</string>
    <string name="worth" >%1$d giveaways, worth $%2$s</string>
</resources>